modal gap fix

--- a/src/sass/components/_checkbox.scss
+++ b/src/sass/components/_checkbox.scss
@@ -12,7 +12,7 @@
 .checkbox__inner {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 8px;
 }
 
 .checkbox__container {
@@ -28,7 +28,11 @@
 
 .checkbox {
   display: flex;
-  gap: 10px;
+  gap: 4px;
+
+  @include mq(tab) {
+    gap: 10px;
+  }
 }
 
 .checkbox__input {
